# git-quest

./: .flake8  .gitignore  README.md  __main__.py  main.py  pyproject.toml
.github/workflows/: main.yml
core/: __init__.py  config.py  exceptions.py  game_engine.py  level_runner.py  level_setup_service.py  logger.py  mission_engine.py  progress_manager.py  score_engine.py
core/objectives/: advanced_objectives.py  base.py  commit_objectives.py  factory.py  merge_objectives.py  state_objectives.py
git_engine/: __init__.py  git_commands.py  git_executor.py  git_graph.py  repo_analyzer.py  repo_manager.py
level_definitions/: level_loader.py
level_definitions/levels/: level01.json  level02.json  level03.json  level04.json  level05.json  level06.json  level07.json  level08.json  level09.json  level10.json  level11.json  level12.json  level13.json  level14.json  level15.json  level16.json  level17.json  level18.json  level19.json  level20.json  level21.json  level22.json  level23.json  level24.json  level25.json  level26.json  level27.json  level28.json  level29.json  level30.json  level31.json  level32.json  level33.json  level34.json  level35.json  level36.json  level37.json  level38.json  level39.json  level40.json  (+10 more)
level_generators/: __init__.py  merge_conflict_generator.py
tests/: test_config.py  test_git_executor.py  test_score_engine.py
tests/integration/: test_mission_flow.py
ui/: __init__.py  ascii_graph.py  cli_app.py  hints.py  menus.py
utils/: __init__.py  filesystem.py
